added new routes, added middleware
