# docs/swagger.json
@@ -117,6 +117,51 @@
                 }
             }
         },
+        "/company-stocks/list": {
+            "get": {
+                "description": "get daily company stock list",
+                "tags": [
+                    "company_stock"
+                ],
+                "summary": "GetDailyCompanyStockList",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "page_size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CompanyStockList"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/company-stocks/sell/{user_id}": {
             "post": {
                 "description": "sell the selected amount of company stock",
@@ -161,36 +206,30 @@
                 }
             }
         },
-        "/company-stocks/{user_id}": {
-            "post": {
-                "description": "buy or sell the selected amount of company stock",
+        "/company-stocks/{ticker}": {
+            "get": {
+                "description": "get history value of company stock",
                 "tags": [
                     "company_stock"
                 ],
-                "summary": "BuyOrSellCompanyStock",
+                "summary": "GetHistoricValueOfCompanyStock",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "user_id",
-                        "name": "user_id",
+                        "description": "ticker",
+                        "name": "ticker",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/v1companystock.BuyOrSellCompanyStocksRequest"
-                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserTransactions"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CompanyStock"
+                            }
                         }
                     },
                     "400": {
@@ -298,6 +337,89 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.UserAssets"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user-transactions/{user_id}": {
+            "get": {
+                "description": "get user transactions",
+                "tags": [
+                    "user_transactions"
+                ],
+                "summary": "GetUserTransactions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UserTransactionUnit"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user-transactions/{user_id}/{ticker}": {
+            "get": {
+                "description": "get user transactions by ticker",
+                "tags": [
+                    "user_transactions"
+                ],
+                "summary": "GetUserTransactionsByTicker",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ticker",
+                        "name": "ticker",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UserTransactionUnit"
                             }
                         }
                     },
@@ -480,6 +602,20 @@
                 }
             }
         },
+        "models.CompanyStockList": {
+            "type": "object",
+            "properties": {
+                "company_stock": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CompanyStock"
+                    }
+                },
+                "number_of_results": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.UserAssets": {
             "type": "object",
             "properties": {
@@ -505,6 +641,29 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserTransactionUnit": {
+            "type": "object",
+            "properties": {
+                "buy_price": {
+                    "type": "number"
+                },
+                "company_stock_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "sell_price": {
+                    "type": "number"
+                },
+                "ticker": {
                     "type": "string"
                 }
             }
@@ -602,20 +761,6 @@
                 }
             }
         },
-        "v1companystock.BuyOrSellCompanyStocksRequest": {
-            "type": "object",
-            "properties": {
-                "buy_or_sell": {
-                    "type": "string"
-                },
-                "company_stock_id": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
         "v1companystock.SellCompanyStockRequest": {
             "type": "object",
             "properties": {
@@ -633,7 +778,7 @@
                 "company_stock": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/v1userassets.UserAssetsProfitsPerStock"
+                        "$ref": "#/definitions/v1userassets.UserAssetsStocksInfo"
                     }
                 },
                 "total_current_value": {
@@ -650,7 +795,7 @@
                 }
             }
         },
-        "v1userassets.UserAssetsProfitsPerStock": {
+        "v1userassets.UserAssetsStocksInfo": {
             "type": "object",
             "properties": {
                 "buy_price": {
