# routes/v1/company_stock/company_stock.go
@@ -9,6 +9,7 @@ import (
 func AddCompanyStocksRoutes(rg *gin.RouterGroup) {
 	rg.GET("/", v1CompanyStock.GetDailyCompanyStock)
 	rg.GET("/list", v1CompanyStock.GetDailyCompanyStockList)
+	rg.GET("/:ticker", v1CompanyStock.GetHistoricValueOfCompanyStock)
 	rg.POST("/buy/:user_id", v1CompanyStock.BuyCompanyStock)
 	rg.POST("/sell/:user_id", v1CompanyStock.SellCompanyStock)
 }
